glibc (2.3.1-12) unstable; urgency=low

  * GOTO Masanori <gotom@debian.or.jp>
    - debian/patches/glibc23-malloc-check.dpatch: Fix hppa MALLOC_CHECK_ 
      invalid pointer problem.  (Closes: #177242)
    - debian/patches/libgcc-compat-sparc.dpatch: Fix sparc libgcc compat
      symbol problem.  Patched by Guido Guenther <agx@debian.org>
      (Closes: #178645)
    - debian/patches/locales-supported.dpatch: This dpatch addes many
      locales especially for UTF-8 and ISO-8859-15, to display debconf
      locale menu using SUPPORTED.orig.
      (Closes: #135334, #154556, #177472, #99623, #130517)
    - debian/packages.d/glibc-doc.mk: add pthread_{getspecific, key_delete,
      setspecific} manpage symlinks to pthread_key_create. (Closes: #99530)
    - debian/manpages/ldconfig.8: Update from the redhat manpages.
      (Closes: #180916)
    - debian/locales/DEBIAN/postinst: Fix default environment variable
      "Leave" or "Leave," does not affect its meaning.
    - debian/patches/libgcc-compat-all.dpatch: Fix i386 libgcc compat
      symbol problem, this dpatch merges with
      libgcc-compat-{sparc,mips}.dpatch, patched by Guido Guenther
      <agx@debian.org>. (Closes: #179781, #180330)

 -- GOTO Masanori <gotom@debian.or.jp>  Sat,  8 Feb 2003 22:08:59 +0900

glibc (2.3.1-11) unstable; urgency=low

  * GOTO Masanori <gotom@debian.or.jp>
    - debian/libc/DEBIAN/preinst: Fix silly bug at parisc64 kernel version
      check, replace from $ver to $kernel_ver. (Closes: #178159, #178217)
    - debian/patches/glibc23-cmov.dpatch: Fix hwcap inappropriate handling 
      not to load CMOV libraries (/*/lib/i686/cmov/) on VIA C3 architecture.
    - debian/patches/libgcc-compat-mips.dpatch: Fix undefined some symbols
      like __umoddi3 to export libgcc compat symbol.  Patched by
      Guido Guenther <agx@debian.org>.
    - debian/patches/0list: Disabled ldso-disable-hwcap.dpatch because
      (1) -opt is not provided currently, (2) disabling hwcap is not good