@@ -1,7 +1,7 @@
 glibc (2.3.1-12) unstable; urgency=low
 
   * GOTO Masanori <gotom@debian.or.jp>
-    - debian/patches/glibc23-malloc-check.dpatch: Fix hppa MALLOC_CHECK_ 
+    - debian/patches/glibc23-malloc-check.dpatch: Fix hppa MALLOC_CHECK_
       invalid pointer problem.  (Closes: #177242)
     - debian/patches/libgcc-compat-sparc.dpatch: Fix sparc libgcc compat
       symbol problem.  Patched by Guido Guenther <agx@debian.org>
@@ -20,8 +20,11 @@ glibc (2.3.1-12) unstable; urgency=low
       symbol problem, this dpatch merges with
       libgcc-compat-{sparc,mips}.dpatch, patched by Guido Guenther
       <agx@debian.org>. (Closes: #179781, #180330)
+  * Daniel Jacobowitz <dan@debian.org>
+    - debian/libc/etc/init.d/devpts.sh: Update devpts.sh to work with the
+      new grep package (Closes: #181409).
 
- -- GOTO Masanori <gotom@debian.or.jp>  Sat,  8 Feb 2003 22:08:59 +0900
+ -- Daniel Jacobowitz <dan@debian.org>  Mon, 17 Feb 2003 15:35:59 -0500
 
 glibc (2.3.1-11) unstable; urgency=low
 
